feature: Make responses for orders more descriptive